@@ -3698,4 +3698,10 @@ length(window(x, deltat=4.9))
 length(window(x, deltat=5))
 ## last failed in 2.1.1
 
+## typo in z_atan2.
+(z <- atan2(0+1i, 0+0i))
+stopifnot(all.equal(z, pi/2+0i))
+## was NA in 2.1.1
+
+
 ### end of tests added in 2.1.1 patched ###
